# Smart-Factory-Alert-Agent

./: .gitignore  README.md  agent.py  anomaly_detector.py  data_generator.py  pyproject.toml
config/: knowledge_base.md
tests/: test_agent.py  test_anomaly_detector.py  test_data_gen.py
